kubernetes/overlays/homelab/infrastructure/piraeus-operator/resources/storage-pool-autovg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linstor-storage-pool-autovg
  namespace: piraeus-datastore
  labels:
    app.kubernetes.io/name: piraeus-datastore
    app.kubernetes.io/instance: homelab
    app.kubernetes.io/component: linstor-storage-pool-autovg
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: piraeus-datastore
      app.kubernetes.io/component: linstor-storage-pool-autovg
  template:
    metadata:
      labels:
        app.kubernetes.io/name: piraeus-datastore
        app.kubernetes.io/instance: homelab
        app.kubernetes.io/component: linstor-storage-pool-autovg
        app.kubernetes.io/part-of: homelab
        app.kubernetes.io/managed-by: argocd
    spec:
      serviceAccountName: linstor-storage-pool-autovg
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: tmp
          emptyDir: {}
      containers:
        - name: reconciler
          image: alpine/kubectl:1.35.0
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          command:
            - /bin/sh
            - -ceu
            - |
              [...]
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
