kubernetes/overlays/homelab/infrastructure/piraeus-operator/resources/monitoring.yaml
apiVersion: v1
kind: Service
metadata:
  name: drbd-reactor
  namespace: piraeus-datastore
  labels:
    app.kubernetes.io/name: piraeus-datastore
    app.kubernetes.io/instance: homelab
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: argocd
    app: drbd-reactor
spec:
  ports:
    - name: metrics
      port: 9942
      targetPort: 9942
  selector:
    app.kubernetes.io/component: linstor-satellite
    app.kubernetes.io/instance: homelab
